Chore: Add file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,vim,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,vim,node
 
+docs/WIR.md
+
 ### macOS ###
 # General
 .DS_Store
